--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,54 @@
 alembic==1.13.3
 aniso8601==9.0.1
 asttokens==2.4.1
-attrs==24.2.0
 backcall==0.2.0
 bcrypt==4.2.0
+blinker==1.8.2
+certifi==2024.7.4
 click==8.1.7
 decorator==5.1.1
-executing==2.1.0
-Faker==14.2.0
-Flask==2.2.2
+distlib==0.3.8
+executing==2.0.1
+filelock==3.15.4
+Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
-Flask-Migrate==3.1.0
+Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.0.2
+Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
-gunicorn==23.0.0
-importlib-resources==5.10.0
 importlib_metadata==8.5.0
-iniconfig==2.0.0
-ipdb==0.13.9
+importlib_resources==6.4.5
+ipdb==0.13.13
 ipython==8.12.3
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
-Mako==1.3.6
+Mako==1.3.5
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
-packaging==24.1
 parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
-pluggy==1.5.0
-prompt_toolkit==3.0.48
+pipenv==2024.0.1
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
-py==1.11.0
 Pygments==2.18.0
 PyJWT==2.9.0
-pytest==7.1.3
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 six==1.16.0
 SQLAlchemy==2.0.36
-SQLAlchemy-serializer==1.4.12
 stack-data==0.6.3
-toml==0.10.2
-tomli==2.0.2
+tomli==2.0.1
 traitlets==5.14.3
 typing_extensions==4.12.2
+virtualenv==20.26.3
 wcwidth==0.2.13
-Werkzeug==2.2.2
+Werkzeug==3.0.4
 zipp==3.20.2
