--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 ipdb==0.13.13
@@ -28,6 +29,7 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+packaging==24.2
 parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
@@ -44,6 +46,7 @@ python-dotenv==1.0.1
 pytz==2024.2
 six==1.16.0
 SQLAlchemy==2.0.36
+SQLAlchemy-serializer==1.4.12
 stack-data==0.6.3
 tomli==2.0.1
 traitlets==5.14.3
